.local/kind/nfs-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kind-nfs
  namespace: unique
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kind-nfs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kind-nfs
    spec:
      containers:
        - name: nfs
          image: itsthenetwork/nfs-server-alpine:12
          securityContext:
            privileged: true
          ports:
            - name: nfs
              containerPort: 2049
            - name: rpcbind
              containerPort: 111
          volumeMounts:
            - name: exports
              mountPath: /exports
      volumes:
        - name: exports
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kind-nfs
  namespace: unique
spec:
  selector:
    app.kubernetes.io/name: kind-nfs
  ports:
    - name: nfs
      port: 2049
      targetPort: nfs
    - name: rpcbind
      port: 111
      targetPort: rpcbind
