.local/kind/local-virtual-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-unique
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - unique.localhost
  http:
    - rewrite:
        authority: unique.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: kong-gateway-proxy.unique.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-api
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - api.localhost
  http:
    - rewrite:
        authority: api.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: kong-gateway-proxy.unique.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-id
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - id.localhost
  http:
    - rewrite:
        authority: id.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: zitadel.unique.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-rustfs
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - rustfs.localhost
  http:
    - rewrite:
        authority: rustfs.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: rustfs-svc.unique.svc.cluster.local
            port:
              number: 9001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-harbor
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - harbor.localhost
  http:
    - rewrite:
        authority: harbor.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: harbor.unique.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-rabbitmq
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - rabbitmq.localhost
  http:
    - rewrite:
        authority: rabbitmq.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: rabbitmq.unique.svc.cluster.local
            port:
              number: 15672
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-litellm
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - litellm.localhost
  http:
    - rewrite:
        authority: litellm.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: litellm.unique.svc.cluster.local
            port:
              number: 4000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: local-grafana
  namespace: unique
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - grafana.localhost
  http:
    - rewrite:
        authority: grafana.ingress.pcai0201.fr2.hpecolo.net
      route:
        - destination:
            host: kube-prometheus-stack-grafana.unique.svc.cluster.local
            port:
              number: 80
